# aviutl2-linux

./: .gitignore  CREDITS.md  Default.aul2  LICENSE  README.md  al2_wav_saver_f32.auo2  al2_wav_saver_s16.auo2  aviutl.ini  aviutl2.txt  build-wine.sh  catalog  credits.txt  debug.sh  default.word  dxvk  dxvk.conf  effect.conf  launch-ge.sh  launch.sh  lua.txt  package.ini  preset.params  proton-launch.sh  script.anm2  script.cam2  script.obj2  script.scn2  script.tra2  setup-nvidia.sh  setup.sh  style.conf  system.conf  test.aup2  wine
Plugin/: build-plugin.sh
catalog-gui/: index.html  package.json  run.sh
catalog-gui/src/: App.tsx  styles.css
catalog-gui/src-tauri/: Cargo.toml  tauri.conf.json
catalog-gui/src-tauri/capabilities/: default.json
catalog-gui/src-tauri/src/: lib.rs  main.rs
catalog-gui/src-tauri/src/commands/: catalog.rs  detect.rs  install.rs  mod.rs  system.rs
patches/: d3d10core-dynamic-dxgcreatedevice.patch.disabled  d3d11-checkformatsupport.patch.disabled  d3d11-logcreatetexture2d.patch  d3d11-video-formats-gl.patch.disabled  dwrite-hittest.patch  glsl-shader-yuv-color-fixup.patch.disabled  wined3d-debug-texture-create.patch  wined3d-nv12-texture.patch.disabled  wined3d-texture-gl-upload-pitch.patch.disabled  wined3d-yuv-keep-texture-cap.patch.disabled  wined3d-yuv-texture.patch.disabled  wined3d-yuy2-upload-rgba8.patch.disabled
pfx/: .update-timestamp  system.reg  user.reg  userdef.reg
tools/: dismiss-dialogs.py  encode-output.sh  install-lsmash-works.sh  japanese-fonts.reg  summarize-errors.py
tools/catalog/: catalog-cli.py
(+626 files in other folders)
