[package]
name = "aviutl2-catalog"
version = "0.1.0"
edition = "2021"

[lib]
name = "aviutl2_catalog_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
once_cell = "1"
regex = "1"
zip = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
anyhow = "1"
walkdir = "2"
sysinfo = "0.30"
